# adb_socket_

./: Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: main.rs
transport/: Cargo.toml
transport/src/: lib.rs  utils.rs
transport/src/commands/: devices.rs  list.rs  mod.rs  pull.rs  push.rs  shell.rs  stat.rs
transport/src/result/: dent.rs  device.rs  mod.rs  stat.rs
transport/src/transport/: mod.rs  tcp_transport.rs  transport.rs  unix_stream_transport.rs
