[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "adb-client"
path = "src/main.rs"
[dependencies]
tokio = { version = "1", features = ["macros","fs","net","rt-multi-thread"] }
transport = { path = "../transport" }
clap = { version = "3", features = ["derive"] }
walkdir = "2"
anyhow = "1"
async-recursion = "1.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

