[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros","fs","net","io-util"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.74"
nom = "6"